--- a/Statistics_output.html
+++ b/Statistics_output.html
@@ -1,9 +1,10 @@
 
 <table style="text-align:center"><caption><strong>Shorter statistics</strong></caption>
 <tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Statistic</td><td>N</td><td>Mean</td><td>St. Dev.</td><td>Min</td><td>Max</td></tr>
-<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">age</td><td>13,452</td><td>30.20</td><td>6.41</td><td>16</td><td>46</td></tr>
-<tr><td style="text-align:left">collgrad</td><td>13,452</td><td>0.19</td><td>0.39</td><td>0</td><td>1</td></tr>
-<tr><td style="text-align:left">ttl_exp</td><td>13,452</td><td>6.77</td><td>4.41</td><td>0.00</td><td>28.88</td></tr>
-<tr><td style="text-align:left">union</td><td>13,452</td><td>0.23</td><td>0.42</td><td>0</td><td>1</td></tr>
-<tr><td style="text-align:left">hours</td><td>13,452</td><td>36.20</td><td>10.03</td><td>1</td><td>168</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">age</td><td>18,703</td><td>31.63</td><td>5.96</td><td>20</td><td>46</td></tr>
+<tr><td style="text-align:left">collgrad</td><td>18,703</td><td>0.20</td><td>0.40</td><td>0</td><td>1</td></tr>
+<tr><td style="text-align:left">ttl_exp</td><td>18,703</td><td>7.85</td><td>4.54</td><td>0.02</td><td>28.88</td></tr>
+<tr><td style="text-align:left">union</td><td>18,703</td><td>0.23</td><td>0.42</td><td>0</td><td>1</td></tr>
+<tr><td style="text-align:left">hours</td><td>18,703</td><td>36.77</td><td>9.59</td><td>1</td><td>168</td></tr>
+<tr><td style="text-align:left">ln_wage_winsorized</td><td>18,703</td><td>1.76</td><td>0.46</td><td>0.00</td><td>2.96</td></tr>
 <tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr></table>
